@@ -46,7 +46,7 @@ extern "C" {
 #ifdef _MSVCRT_
 #define __pctype_func() (_pctype)
 #else
-#define __pctype_func() (*_imp___pctype)
+#define __pctype_func() (* __MINGW_IMP_SYMBOL(_pctype))
 #endif
 #endif
 
@@ -54,8 +54,8 @@ extern "C" {
 #ifdef _MSVCRT_
   extern unsigned short *_pctype;
 #else
-  extern unsigned short **_imp___pctype;
-#define _pctype (*_imp___pctype)
+  extern unsigned short ** __MINGW_IMP_SYMBOL(_pctype);
+#define _pctype (* __MINGW_IMP_SYMBOL(_pctype))
 #endif
 #endif
 
@@ -69,8 +69,8 @@ extern "C" {
 #ifdef _MSVCRT_
   extern unsigned short *_wctype;
 #else
-  extern unsigned short **_imp___wctype;
-#define _wctype (*_imp___wctype)
+  extern unsigned short ** __MINGW_IMP_SYMBOL(_wctype);
+#define _wctype (* __MINGW_IMP_SYMBOL(_wctype))
 #endif
 #endif
 
@@ -78,9 +78,9 @@ extern "C" {
 #ifdef _MSVCRT_
   extern unsigned short *_pwctype;
 #else
-  extern unsigned short **_imp___pwctype;
-#define _pwctype (*_imp___pwctype)
-#define __pwctype_func() (*_imp___pwctype)
+  extern unsigned short ** __MINGW_IMP_SYMBOL(_pwctype);
+#define _pwctype (* __MINGW_IMP_SYMBOL(_pwctype))
+#define __pwctype_func() (* __MINGW_IMP_SYMBOL(_pwctype))
 #endif
 #endif
 #endif
